# multiplex

./: CMakeLists.txt  LICENSE  README.md
src/: sine~.c
